add map url target

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             foot..</p>
         </div>
       </div>
-      <a href="https://g.page/pdpuz?share" class="location__link">
+      <a href="https://g.page/pdpuz?share" class="location__link" target="_blank">
         <img class="location__link-img " src="./img/map.jpg" alt="Map" width="1920" height="760"
           srcset="./img/map.jpg 1x , ./img/map@2x.jpg 2x">
       </a>
