add h2 to features section

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     </section>
     <section class="features">
       <div class="container features__container">
+        <h2 class="visually-hidden">Site features section</h2>
         <ul class="features__list">
           <li class="features__item features__item--treatment">
             <h3 class="features__item-title">Treatment</h3>
